docs/errors.txt
================================================================
                AI-ASSISTED COMMIT WORKFLOW                   
================================================================
🧹 Cleaning workspace and staging files...
✅ Files staged successfully
📚 Updating project documentation...
✅ Documentation updated and staged
🔍 Running code quality checks...
  • Black (formatting)...
 ✅
  • Ruff (linting & imports)...
 🔧
  • MyPy (type checking)...
 ❌
MyPy errors found - continuing anyway
✅ All quality checks passed
🤖 Generating AI commit message...
Generated: "Update documentation and script files"
💾 Committing changes...
black....................................................................Passed
ruff.....................................................................Failed
- hook id: ruff
- exit code: 1

src/create_python_project/utils/config.py:153:5: F841 Local variable `error_icon` is assigned to but never used
    |
151 |     }
152 |     # Add error icon for better UX
153 |     error_icon = "❌"
    |     ^^^^^^^^^^ F841
    |
    = help: Remove assignment to unused variable `error_icon`

Found 1 error.
No fixes available (1 hidden fix can be enabled with the `--unsafe-fixes` option).

mypy.....................................................................Failed
- hook id: mypy
- exit code: 1

src/create_python_project/utils/config.py:153: error: Statement is unreachable  [unreachable]
Found 1 error in 1 file (checked 1 source file)

Update Project Documentation.............................................Failed
- hook id: update-documentation
- duration: 14.11s
- files were modified by this hook

📚 Updating project documentation...
Starting documentation update process - 2025-05-31 01:13:12
  • API documentation...
File '/home/michaelnewham/Projects/create_python_project/ai-docs/api/create_python_project/index.html' already exists. Delete it, or run with --force
   ✅
Updating folder documentation files...
Created/updated documentation for ai-docs folder
Created/updated documentation for src folder
Created/updated documentation for .git folder
Updating README.md with project overview...
README.md updated successfully
Updating convo.md with documentation changes...
mv: cannot stat '/home/michaelnewham/Projects/create_python_project/ai-docs/convo.md.tmp': No such file or directory
convo.md updated successfully
Checking for sensitive information in ai-docs...
✅ No sensitive information detected in ai-docs folder.
✅ The ai-docs folder is not in .gitignore. Documentation changes will be tracked by Git.
Limiting all markdown files to 500 lines maximum...
Truncated /home/michaelnewham/Projects/create_python_project/Proj_Setup.md from 503 lines to 500 lines
All markdown files limited to 500 lines maximum
Tracking all updated files...

📋 Update Summary:
----------------------------------------
Documentation updated on: 2025-05-31 01:13:12
Total files updated: 26

Full list saved to: /home/michaelnewham/Projects/create_python_project/ai-docs/updated_files.txt

To see all updated files, run:
cat /home/michaelnewham/Projects/create_python_project/ai-docs/updated_files.txt

Or run with --verbose next time:
./scripts/update_documentation.sh --verbose
Documentation process completed - 2025-05-31 01:13:26


 *  The terminal process "/usr/bin/zsh '-c', '/home/michaelnewham/Projects/create_python_project/scripts/ai_commit_workflow.sh'" terminated with exit code: 1. 